--- a/src/topics.html
+++ b/src/topics.html
@@ -113,21 +113,21 @@
         <div class="row">
             <div class="box" onclick="showPopup('Fractions')">
                 <img src="../images/fractions.png" alt="Image 1">
-                <div class="title">Fractions</div>
+                <div class="title">ಭಿನ್ನರಾಶಿಗಳು</div>
             </div>
             <div class="box" onclick="showPopup('Interest')">
                 <img src="../images/interest.jpg" alt="Image 2">
-                <div class="title">Interest</div>
+                <div class="title">ಆಸಕ್ತಿ</div>
             </div>
         </div>
         <div class="row">
             <div class="box" onclick="showPopup('Nutrition')">
                 <img src="../images/nutrition.jpeg" alt="Image 3">
-                <div class="title">Nutrition</div>
+                <div class="title">ಕಳೆಯುವಿಕೆ</div>
             </div>
             <div class="box" onclick="showPopup('Habitat')">
                 <img src="../images/habitat.jpeg" alt="Image 4">
-                <div class="title">Habitat</div>
+                <div class="title">ಆವಾಸಸ್ಥಾನ</div>
             </div>
         </div>
         <!-- Add more rows or boxes as needed -->
@@ -184,7 +184,7 @@
             // Determine the PDF file URL based on the topic
             switch (topic) {
                 case 'Fractions':
-                    pdfUrl = "../content/Fractions.pdf";
+                    pdfUrl = "/content/Fractions.pdf";
                     break;
                 case 'Interest':
                     pdfUrl = "../content/Interest.pdf";
