--- a/src/question_nutrition.html
+++ b/src/question_nutrition.html
@@ -156,7 +156,7 @@
     
         nextButton.addEventListener('click', () => {
             // Redirect to the story time website
-            window.location.href = "../content/Nutrition.pdf";
+            window.location.href = "content/subtraction.pdf";
         });
     </script>
 
