--- a/src/question_interest.html
+++ b/src/question_interest.html
@@ -155,7 +155,7 @@
     
         nextButton.addEventListener('click', () => {
             // Redirect to the story time website
-            window.location.href = "../content/Interest.pdf";
+            window.location.href = "content/interestmvp.pdf";
         });
     </script>
 
