--- a/src/topics.html
+++ b/src/topics.html
@@ -159,16 +159,16 @@
             // Determine the challenge HTML file URL based on the topic
             switch (topic) {
                 case 'Fractions':
-                    challengeUrl = "../src/question_fraction.html";
+                    challengeUrl = "src/question_fraction.html";
                     break;
                 case 'Interest':
-                    challengeUrl = "../src/question_interest.html";
+                    challengeUrl = "src/question_interest.html";
                     break;
                 case 'Nutrition':
-                    challengeUrl = "../src/question_nutrition.html";
+                    challengeUrl = "src/question_nutrition.html";
                     break;
                 case 'Habitat':
-                    challengeUrl = "../src/question_habitats.html";
+                    challengeUrl = "src/question_habitats.html";
                     break;
                 
             }
