--- a/src/question_fraction.html
+++ b/src/question_fraction.html
@@ -154,7 +154,7 @@
     
         nextButton.addEventListener('click', () => {
             // Redirect to the story time website
-            window.location.href = "content/fractionsmvp.pdf";
+            window.location.href = "../content/fractionsmvp.pdf";
         });
     </script>
 
