Update topics.html new file name

--- a/src/topics.html
+++ b/src/topics.html
@@ -184,13 +184,13 @@
             // Determine the PDF file URL based on the topic
             switch (topic) {
                 case 'Fractions':
-                    pdfUrl = "content/fractionsmvp.pdf";
+                    pdfUrl = "content/Fractions.pdf";
                     break;
                 case 'Interest':
-                    pdfUrl = "content/interestmvp.pdf";
+                    pdfUrl = "content/Interest.pdf";
                     break;
                 case 'Nutrition':
-                    pdfUrl = "content/subtraction.pdf";
+                    pdfUrl = "content/Nutrition.pdf";
                     break;
                 case 'Habitat':
                     pdfUrl = "../content/Habitats.pdf";
